syntax = "proto3";

package count;


// The greeting service definition.
service Counter {
  rpc GetCounter(Empty) returns (CounterReply);
  rpc Increment(Empty) returns (CounterReply);
  rpc SetCounter(CounterRequest) returns (Empty);
  rpc AccumulateCount (stream CounterRequest) returns (CounterReply);
  rpc Countdown (Empty) returns (stream CounterReply);
}


message Empty{}

message CounterRequest {
  int32 count = 1;
}


message CounterReply {
  int32 curCounter = 1;
}
